# TrafficLightsCpp

./: .gitignore  CMakeLists.txt  MyButton.qml  README.md  TrafficLightCar.qml  TrafficLightPedestrian.qml  main.cpp  main.qml  trafficlight.cpp  trafficlight.h  trafficlightbase.cpp  trafficlightbase.h  trafficlightmanager.cpp  trafficlightmanager.h
.github/workflows/: build.yml
